<resources>
    <string name="app_name">Weather App</string>
    <string name="title_home">Current Weather</string>
    <string name="title_daily_forecast">Daily Forecast</string>
    <string name="title_settings">Settings</string>
    <string name="current_temp">Current temperature:</string>
    <string name="feels_like">Feels Like:</string>
    <string name="humidity">Humidity:</string>
    <string name="weather_image_description">Image of current weather conditions</string>
    <string name="max_temperature">Max Temperature:</string>
    <string name="min_temperature">Min Temperature:</string>
    <string name="rain_chance">Chance of Rain:</string>
    <string name="preference_file_key">com.example.sem6_pmd_weathermobileapp</string>
    <string name="refresh_button">Refresh</string>
</resources>