<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sem6_pmd_weather_mobile_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sem6_pmd_weather_mobile_app.ui.daily_forecast.DailyForecastFragment"
        android:label="@string/title_daily_forecast"
        tools:layout="@layout/fragment_daily_forecast" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sem6_pmd_weather_mobile_app.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>